--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       <footer class="footer">
         <div class="footer-content">
             <div class="footer-logo">
-                <img src="./logo.png" alt="TAROT BY NOOR Logo">
+                <img src="./Logo.png" alt="TAROT BY NOOR Logo">
             </div>
             <div class="footer-links">
                 <a href="https://www.instagram.com/tarotbynoor/"><img src="./SVGs/instagram.svg" alt="Instagram Link" width="20px"></a>
