--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <div class="footer-links">
                 <a href="https://www.instagram.com/tarotbynoor/"><img src="./SVGs/instagram.svg" alt="Instagram Link" width="20px"></a>
                 <a href="https://wa.me/917000018450?text=Hey,%20I%20want%20to%20enquire%20about%20Tarot%20Cards%20and%20Tarot%20Reading!" target="_blank"><img src="./SVGs/whatsapp.svg" alt="WhatsApp Link" width="20px"></a>
-                <a href="https://wa.me/?text=Hey,%20just%20found%20someone%20who%20sells%20cool%20tarot%20cards%20AND%20does%20tarot%20readings.%20Totally%20worth%20checking%20out!%20https://wantedgiant006.github.io/Tarot-By-Noor/" target="_blank">Refer to a Friend</a>
+                <a href="https://wa.me/?text=Hey,%20just%20found%20someone%20who%20sells%20cool%20tarot%20cards%20AND%20does%20tarot%20readings.%20Totally%20worth%20checking%20out!%20https://www.tarotbynoor.in/" target="_blank">Refer to a Friend</a>
             </div>
         </div>
         <div class="footer-bottom">
