--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
   </div>
   <div class="footer-bottom">
       <p>&copy; 2025 Copyright TAROT BY NOOR</p>
-      <p>Website by <a href="https://www.instagram.com/gurvansh_juneja/">Gurvansh Singh Juneja</a></p>
+      <p>Website by <a href="https://www.instagram.com/what_the_vansh/">Gurvansh Singh Juneja</a></p>
   </div>
 </footer>
 
