--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <link rel="icon" type="image/svg+xml" href="./SVGs/Favicon.svg">
     <title>Tarot by Noor</title>
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-H50D4V5VYF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-H50D4V5VYF');
+</script>
 <body>
     <div id="to-top">
       <a href="#" class="to-top-svg"><img src="./SVGs/To-Top.svg" alt="Arrow Head SVG" width="50px"></a>
@@ -436,3 +445,4 @@
       <script src="./JavaScript/TW-script.js"></script>
 </body>
 </html>
+
