--- a/index.html
+++ b/index.html
@@ -290,24 +290,24 @@
                 
                 <section class="pricing-section">
                   <div class="pricing-card">
-                      <div class="pricing-header">2 Ques</div>
-                      <div class="pricing-body">₹151</div>
+                      <div class="pricing-header">Starting at</div>
+                      <div class="pricing-body">₹399</div>
                   </div>
                   <div class="pricing-card">
                       <div class="pricing-header">10 mins</div>
-                      <div class="pricing-body">₹249</div>
-                  </div>
-                  <div class="pricing-card">
-                      <div class="pricing-header">15 mins</div>
-                      <div class="pricing-body">₹329</div>
+                      <div class="pricing-body">₹550</div>
                   </div>
                   <div class="pricing-card">
                       <div class="pricing-header">30 mins</div>
-                      <div class="pricing-body">₹499</div>
+                      <div class="pricing-body">₹750</div>
                   </div>
                   <div class="pricing-card">
-                      <div class="pricing-header">45 mins</div>
-                      <div class="pricing-body">₹699</div>
+                      <div class="pricing-header">40 mins</div>
+                      <div class="pricing-body">₹1000</div>
+                  </div>
+                  <div class="pricing-card">
+                      <div class="pricing-header">1 hour</div>
+                      <div class="pricing-body">₹1499</div>
                   </div>
               </section>
               
@@ -443,6 +443,7 @@
       <script src="./JavaScript/TW-script.js"></script>
 </body>
 </html>
+
 
 
 
