--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                 
                 <section class="pricing-section">
                   <div class="pricing-card">
-                      <div class="pricing-header">Starting at</div>
+                      <div class="pricing-header">Starting</div>
                       <div class="pricing-body">₹399</div>
                   </div>
                   <div class="pricing-card">
@@ -443,6 +443,7 @@
       <script src="./JavaScript/TW-script.js"></script>
 </body>
 </html>
+
 
 
 
